			   XPCE ChangeLog
			   ==============


* ADDED: (very simple) make check

* FIXED: frame->geomtry for transient frames (MS-Windows).  Holger Kanwischer.

* FIXED: PceEmacs crash on `revert-buffer'.  Pierpaolo Bernardi.


VERSION 6.5.6, distributed with SWI-Prolog 5.5.6
================================================

* FIXED: Bug#14: image->pixel for <-kind = bitmap. Holger Kanwischer.

* FIXED: omitted close in text_buffer->insert, introduced in 5.5.3.

* FIXED: Bug#11: crash on text objects with more than 200 lines.
  Holger Kanwischer.


VERSION 6.5.5, distributed with SWI-Prolog 5.5.5
================================================

* FIXED: Using text-buffer for binary I/O.  Fixes
  send(Image, save, TextBuffer, jpeg), etc. (bug introduced with wide
  characters).

* FIXED: Bug#7: Get rid of maximum rows/columns in a dialog window (used
  to be 100/100).  Holger Kanwischer.


VERSION 6.5.4, distributed with SWI-Prolog 5.5.4
================================================

* FIXED: X11 error in text-metric computation, notably showing up when
  positioning the caret in text-items.

* ENHANCED: some cleanup and more robustness in library(Xserver) to create
  a head-less server for XPCE.

* FIXED: Crash in wrapped text objects.  Caused by incompatible change in
  low level string functions.  As compatibility is restored, more problems
  may be fixed by this.

* FIXED: Bug#6: TAB in password item.

* FIXED: `file->append' for text-files did not terminate (bug introduced
  in 6.5.3).

* PORT: Fix various MacOS (and other) portability problems introduced
  in wide character version.

* PORT: enhanced detection of visibility attribute


VERSION 6.5.3, distributed with SWI-Prolog 5.5.3
================================================

* ADDED: Changed X11 frame class to resemble the XPCE class name.  For
  grouping in KDE.

* ADDED: XFT-based font support for the Unix/X11 version.

* FIXED: Environment handling for class process (Unix).
